tests/indexed-types/should_compile/T9085.hs
{-# LANGUAGE TypeFamilies #-}

module T9085 where

type family F a where
  F a = Int
  F Bool = Bool
