tests/indexed-types/should_fail/T7536.hs
{-# LANGUAGE TypeFamilies #-}

module T7536 where

type T v = Int

type family TF a :: *
type instance TF (T a) = a

